--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>gh-pagesブランチはGitHub Pagesに公開されます。</h1>
     <p>この変更はmainブランチで追加されました。</p>
-    <h6>ピカチュウ</h6>
+    <p>ピィカチュウ!</p>
 </body>
 </html>
